Closed
Bug 814219
Opened 13 years ago
Closed 13 years ago
nsMovemailService doesn't build with external linkage anymore
Categories
(MailNews Core :: Movemail, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 20.0
People
(Reporter: mnyromyr, Assigned: mnyromyr)
Details
(Keywords: regression)
Attachments
(1 file)
787 bytes,
patch
|
neil
:
review+
|
Details | Diff | Splinter Review |
Building with --enable-incomplete-external-linkage now fails:
In file included from /home/kd/projects/mozilla/mozilla.org/src/trunk/mailnews/local/src/nsMovemailService.cpp:18:0:
/home/kd/projects/mozilla/mozilla.org/src/trunk/mailnews/local/src/nsMovemailService.h:31:3: error: ‘nsCOMPtr’ does not name a type
/home/kd/projects/mozilla/mozilla.org/src/trunk/mailnews/local/src/nsMovemailService.cpp: In member function ‘void nsMovemailService::Error(int32_t, const PRUnichar**, uint32_t)’:
/home/kd/projects/mozilla/mozilla.org/src/trunk/mailnews/local/src/nsMovemailService.cpp:101:8: error: ‘mMsgWindow’ was not declared in this scope
/home/kd/projects/mozilla/mozilla.org/src/trunk/mailnews/local/src/nsMovemailService.cpp:104:17: error: ‘mMsgWindow’ was not declared in this scope
/home/kd/projects/mozilla/mozilla.org/src/trunk/mailnews/local/src/nsMovemailService.cpp: In member function ‘virtual nsresult nsMovemailService::GetNewMail(nsIMsgWindow*, nsIUrlListener*, nsIMsgFolder*, nsIMovemailIncomingServer*, nsIURI**)’:
/home/kd/projects/mozilla/mozilla.org/src/trunk/mailnews/local/src/nsMovemailService.cpp:360:3: error: ‘mMsgWindow’ was not declared in this scope
make[2]: *** [nsMovemailService.o] Error 1
Attachment #684213 -
Flags: review?(neil)
Assignee | ||
Updated•13 years ago
|
Assignee: nobody → mnyromyr
Comment 1•13 years ago
|
||
(In reply to Karsten Düsterloh from comment #0)
> /home/kd/projects/mozilla/mozilla.org/src/trunk/mailnews/local/src/
> nsMovemailService.h:31:3: error: ‘nsCOMPtr’ does not name a type
Since the error is in the .h file, why did you patch the .cpp file?
Assignee | ||
Comment 2•13 years ago
|
||
(In reply to neil@parkwaycc.co.uk from comment #1)
> Since the error is in the .h file, why did you patch the .cpp file?
Huh? But I didn't!?!
Comment 3•13 years ago
|
||
Comment on attachment 684213 [details] [diff] [review]
include missing header
Oops, engage brain before typing...
Attachment #684213 -
Flags: review?(neil) → review+
Assignee | ||
Updated•13 years ago
|
Attachment #684213 -
Flags: superreview?(mbanner)
Comment 4•13 years ago
|
||
Comment on attachment 684213 [details] [diff] [review]
include missing header
This doesn't need sr.
Attachment #684213 -
Flags: superreview?(mbanner)
Assignee | ||
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Updated•12 years ago
|
Target Milestone: --- → Thunderbird 20.0
You need to log in
before you can comment on or make changes to this bug.
Description
•