Bug 814219 - nsMovemailService doesn't build with external linkage anymore; r=Neil